adding a point to add radiology drug orders
